overlays/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gopoc-app1-nginx
  namespace: gopoc-app1
spec:
  template:
    spec:
      containers:
      - name: nginx
        image: aypx/gitops-poc-app-1:main-b7c40a1-1623757517 # {"$imagepolicy": "flux-system:app-application-1"}
