overlays/production/ingress.yaml
---
# Source: nginx/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gopoc-app1-nginx
spec:
  rules:
    - host: app1.local
